<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.filmdetail.FilmDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/filmPoster"
            style="@style/FilmPoster"
            android:layout_height="250dp"
            android:contentDescription="@string/poster_of_film"
            android:scaleType="center" />

        <TextView
            android:id="@+id/filmTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/filmOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="@string/overview" />

    </LinearLayout>

</ScrollView>